2002-12-07  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c: Fixed problem with dropout color

2002-12-06  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.h backend/hp.c backend/hp-scl.c backend/hp.conf
	* doc/sane-hp.man doc/descriptions/hp.desc
	  Add option dumb-read to work
	  around problem with Buslogic SCSI driver

2002-12-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure aclocal.m4 acinclude.m4: Fixed MacOS X LD_FLAGS bug.
	* doc/sane-scsi.man: Removed link to ACard problem.
	* doc/sane.tex: Updated contact information.
	* LEVEL2: Removed. Contents is either in the SANE2 standard or in
	  the SANE2 API TODO.
	* Makefile.in doc/Makefile.in: Removed LEVEL2.

2002-12-05  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/sane-mustek.man doc/sane-mustek_usb.man
	  doc/descriptions/mustek.desc doc/descriptions/mustek_usb.desc:
	  Updated links.
	* backend/test.c po/sane-backends.de.po: Minor spelling and translation
	  fixes.
	
2002-12-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/epson_scsi.c backend/sm3600.c: Move config.h include to the
	  top of the include list to avoid compilation errors on platforms
	  not defining u_char. Added AIX lalloca check.
	* aclocal.m4 acinclude.m4 configure configure.in
	  include/sane/config.h.in: Cleanup. Added some missing quotes. Better
	  structure and comments. Tried to keep similar tests in one group.
	  Moved more complicated tests to acinclude.m4. Added explicit test for
	  build and host system type. When checking for programs, used $EXEEXT
	  (hopefully fixes  OS/2 gettext misdetection). Removed obsolete
	  macros. Removed PTAL check. Used autoconf for asm/io.h check.
	  Shortened --enable-foo output and formatted it correctly. Trans-
	  lations were installed even if --disable-translations was set. Don't
	  test for msgcat anymore. Tell why translations aren't installed. Used
	  autoconf 2.5 syntax for AC_OUTPUT and AC_CONFIG_FILES. Make